--- a/FcuCore.Web/Views/Dialogs/EditNodeName.cshtml
+++ b/FcuCore.Web/Views/Dialogs/EditNodeName.cshtml
@@ -26,7 +26,7 @@
             <div class="modal-body">
                 <div class="form-group">
                     <label for="dialog-edit-node-name-input">Name</label>
-                    <input type="text" class="form-control" data-bind="value: name" />
+                    <input type="text" class="form-control" id="dialog-edit-node-name-input" data-bind="value: name" />
                 </div>
             </div>
             <div class="modal-footer">
