--- a/FcuCore.Web/Views/Components/AvailableEvents.cshtml
+++ b/FcuCore.Web/Views/Components/AvailableEvents.cshtml
@@ -1,23 +1,29 @@
 ﻿
-<h5>Available Events</h5>
-<button class="btn btn-secondary btn-sm"><i class="fa fa-plus"></i> Add Short Event</button>
-<div class="events">
+<div class="card">
+    <div class="card-header">
+        Available Events
+        
+        <!-- ko using: modules.eventsNode -->
+        <partial name="/Views/Components/SelectableNode.cshtml"/>
+        <!-- /ko -->
 
-    <!-- ko using: modules.selectedNode -->
-    <partial name="/Views/Components/SelectableNode.cshtml" />
-    <!-- /ko -->
-    <!-- ko using: modules.selectedNode2 -->
-    <partial name="/Views/Components/SelectableNode.cshtml" />
-    <!-- /ko -->
-    <!-- ko foreach: modules.shortEvents -->
-    <div class="event short-event">
-        <div>DN: <span data-bind="text: dn"></span></div>
-        <div data-bind="text: name, attr: {title: name}"></div>
     </div>
-    <!-- /ko -->
+    <div class="card-body">
+            
 
+
+
+        <!-- ko foreach: modules.shortEvents -->
+        <div class="event short-event">
+            <div>DN: <span data-bind="text: dn"></span></div>
+            <div data-bind="text: name, attr: {title: name}"></div>
+        </div>
+        <!-- /ko -->
+
+    </div>
 </div>
 
+<!--
 <div class="event long-event">
     <div>Node: 123, Event: 1</div>
     <div>
@@ -31,3 +37,4 @@
         Another event with a really long name
     </div>
 </div>
+-->
