--- a/FcuCore.Web/Views/Components/SelectableNode.cshtml
+++ b/FcuCore.Web/Views/Components/SelectableNode.cshtml
@@ -16,6 +16,7 @@
     <div class="node-selector">
         <div class="left-arrow"></div>
         <input class="form-control form-control-sm" placeholder="filter" data-bind="textInput: $root.modules.nodeSelectorFilter" />
+        <div class="node-selector-list">
         <!-- ko foreach: $root.modules.nodeSelectorList -->
         <div class="node" data-bind="click: function(n,e) { $parentContext.$rawData(this); $(e.target).closest('.node-selector').hide(); cbus.modules.nodeSelectorFilter(''); }">
             <div>
@@ -23,6 +24,7 @@
             </div>
             <div data-bind="text: name, attr: {title: name}"></div>
         </div>
-        <!-- /ko -->
+            <!-- /ko -->
+            </div>
     </div>
 </div>
