--- a/FcuCore.Web/Views/Dialogs/EditNodeVariables.cshtml
+++ b/FcuCore.Web/Views/Dialogs/EditNodeVariables.cshtml
@@ -23,18 +23,20 @@
                     </div>
                 </div>
             </div>
-            <div class="modal-body">
-               
-                <ul class="nav nav-tabs" role="tablist">
-                    <!-- ko foreach: nodeType.configTabs -->
-                    <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" data-bind="attr:{href:'#dialog-edit-nv-tab-'+name.replace(/[^a-z]/gi, '_')}, text: name, css: {'active': $index() === 0}"></a>
-                    </li>
-                    <!--/ko-->
-                    <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#raw-nvs" data-bind="css: {'active': nodeType.configTabs.length === 0}">Raw NVs</a>
-                    </li>
-                </ul>
+            <div class="modal-body card border-light">
+                <div class="card-header">
+                    <ul class="nav nav-tabs card-header-tabs" role="tablist">
+                        <!-- ko foreach: nodeType.configTabs -->
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="tab" data-bind="attr:{href:'#dialog-edit-nv-tab-'+name.replace(/[^a-z]/gi, '_')}, text: name, css: {'active': $index() === 0}"></a>
+                        </li>
+                        <!--/ko-->
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="tab" href="#raw-nvs" data-bind="css: {'active': nodeType.configTabs.length === 0}">Raw NVs</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="card-body">
                 <div class="tab-content" id="myTabContent">
                     <!-- ko foreach: nodeType.configTabs -->
                     <div class="tab-pane fade" data-bind="attr:{id:'dialog-edit-nv-tab-'+name.replace(/[^a-z]/gi, '_')}, css: {'show active': $index() === 0}">
@@ -59,7 +61,7 @@
                         </div>
                     </div>
                 </div>
-
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-success" data-bind="click: readNodeVariables">Read NVs</button>
