--- a/FcuCore.Web/Views/Home/Index.cshtml
+++ b/FcuCore.Web/Views/Home/Index.cshtml
@@ -4,4 +4,12 @@
 
 <partial name="/Views/Components/NodeTable.cshtml" />
 
-<partial name="/Views/Components/AvailableEvents.cshtml" />
+<div class="row mt-3">
+    <div class="col-6">
+        <partial name="/Views/Components/AvailableEvents.cshtml" />
+    </div>
+    
+    <div class="col-6">
+        <partial name="/Views/Components/AssignedEvents.cshtml" />
+    </div>
+</div>
