switch to entirely js based save/load

--- a/FcuCore.Web/Views/Shared/_Layout.cshtml
+++ b/FcuCore.Web/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
 <partial name="~/Views/Dialogs/ConfigureComms.cshtml" />
 <partial name="/Views/Dialogs/EditNodeVariables.cshtml" />
 <partial name="/Views/Dialogs/EditNodeName.cshtml" />
+<partial name="/Views/Dialogs/LoadConfig.cshtml" />    
 
 <div class="container-fluid">
     <div class="row">
